Added API calls to confidence interval function
